syntax = "proto3";

package influencer;

import "src/network/services/influencer_profile.proto";

option java_multiple_files = true;
option java_package = "com.trufflear.search.influencer";
option java_outer_classname = "GetInfluencerPublicProfileProtos";

// This service is for the users to retrieve Influencer's profile information
service InfluencerPublicProfileService {
  // Get the Influencer's profile info
  rpc GetInfluencerPublicProfile(GetInfluencerPublicProfileRequest) returns (GetInfluencerPublicProfileResponse);

}

message GetInfluencerPublicProfileRequest {
  // username of the influencer
  string username = 1;
}

message GetInfluencerPublicProfileResponse {
    // Describes the response state. Can be either success or error.
    oneof state {
      Success success = 1;
      Error error = 2;
    }

    message Success {
      // profile information of the influencer
      InfluencerProfile profile = 1;
    }

    // For any error, redirect the user back to Trufflear home page
    message Error {
      ErrorType error_type = 1;

      enum ErrorType {
        UNKNOWN = 0;
        // The influencer's profile does not exist
        PROFILE_DOES_NOT_EXIST = 1;
        // The influencer's profile is disabled
        PROFILE_NOT_LIVE = 2;
      }
    }
}

